force-app/main/default/objects/Settlement_Plan_Draft__c/Settlement_Plan_Draft__c.object-meta.xml
<CustomObject>
    <label>Settlement Plan</label>
    <nameField>
        <label>Settlement Plan Draft Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Settlement Plan Draft</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>