force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>Settlement_Plan_Draft__c</referenceTo>
    <relationshipName>Settlement_Plan_Draft</relationshipName>
    <type>Lookup</type>
</CustomField>