force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Contract_File_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_File_ID__c</fullName>
    <label>Contract File ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>