force-app/main/default/objects/Settlement_Plan_Draft__c/fields/CreditorOpportunity__c.field-meta.xml
<CustomField>
    <fullName>CreditorOpportunity__c</fullName>
    <label>CreditorOpportunity</label>
    <referenceTo>CreditorOpportunity__c</referenceTo>
    <relationshipLabel>Settlement Plan Draft</relationshipLabel>
    <relationshipName>Settlement_Plan_Draft</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>