force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance__c</fullName>
    <formula>IF(
    ISBLANK(Revised_Settlement_Amount__c),
    Settlement_Offer_Amount__c,
    Revised_Settlement_Amount__c
  ) - Total_Paid_Amount__c</formula>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>