force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Escrow_Shortage_Count__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Shortage_Count__c</fullName>
    <label>Escrow Shortage Count</label>
    <summaryFilterItems>
        <field>Settlement_Plan_Item__c.Is_Escrow_Shortage__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Settlement_Plan_Item__c.Settlement_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>