force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Final_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Date__c</fullName>
    <label>Final Payment Date</label>
    <summarizedField>Settlement_Plan_Item__c.Payment_Date__c</summarizedField>
    <summaryForeignKey>Settlement_Plan_Item__c.Settlement_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>