force-app/main/default/objects/Settlement_Plan_Draft__c/fields/First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date__c</fullName>
    <label>First Payment Date</label>
    <summarizedField>Settlement_Plan_Item__c.Payment_Date__c</summarizedField>
    <summaryForeignKey>Settlement_Plan_Item__c.Settlement_Plan__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>