force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Funding_Difference__c.field-meta.xml
<CustomField>
    <fullName>Funding_Difference__c</fullName>
    <formula>(Total_Paid_Amount__c + Total_Processing_Amount__c + Total_Scheduled_Amount__c) - IF(ISBLANK(Revised_Settlement_Amount__c), Settlement_Offer_Amount__c, Revised_Settlement_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>