force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Is_Manually_Modified__c.field-meta.xml
<CustomField>
    <fullName>Is_Manually_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manually Modified</label>
    <type>Checkbox</type>
</CustomField>