force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Next_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Amount__c</fullName>
    <label>Next Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>