force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Date__c</fullName>
    <label>Next Payment Date</label>
    <summarizedField>Settlement_Plan_Item__c.Payment_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Settlement_Plan_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </summaryFilterItems>
    <summaryForeignKey>Settlement_Plan_Item__c.Settlement_Plan__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>