force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Revised_Settlement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revised_Settlement_Amount__c</fullName>
    <label>Revised Settlement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>