force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Settlement_Memo__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Memo__c</fullName>
    <label>Settlement Memo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>