force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Settlement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Percentage__c</fullName>
    <formula>(Settlement_Offer_Amount__c /  CreditorOpportunity__r.Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>