force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Settlement_Savings__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Savings__c</fullName>
    <formula>CreditorOpportunity__r.Amount__c  - Settlement_Offer_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>