force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Settlement_Term_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Term_Weeks__c</fullName>
    <formula>(Final_Payment_Date__c - First_Payment_Date__c) / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Term (Weeks)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>