force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Total_Commission_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Fees__c</fullName>
    <label>Total Commission Fees</label>
    <summarizedField>Settlement_Plan_Item__c.Rollup_Commission_Fee__c</summarizedField>
    <summaryFilterItems>
        <field>Settlement_Plan_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Scheduled, Processing, Cleared</value>
    </summaryFilterItems>
    <summaryForeignKey>Settlement_Plan_Item__c.Settlement_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>