force-app/main/default/objects/Settlement_Plan_Draft__c/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <label>Total Paid Amount</label>
    <summarizedField>Settlement_Plan_Item__c.Rollup_Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Settlement_Plan_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Cleared</value>
    </summaryFilterItems>
    <summaryForeignKey>Settlement_Plan_Item__c.Settlement_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>