force-app/main/default/objects/Settlement_Plan_Draft__c/validationRules/Bank_Info_Required_For_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Info_Required_For_Activation</fullName>
    <active>true</active>
    <description>Account Bank Information must be set on the Creditor Opportunity before activating a plan.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Active&quot;),
    OR(ISNEW(), ISCHANGED(Status__c)),
    ISBLANK(CreditorOpportunity__r.Account_Bank_Information__c)
  )</errorConditionFormula>
    <errorMessage>Account Bank Information must be set on the Creditor Opportunity before activating a plan.</errorMessage>
</ValidationRule>